--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,21 @@ target/
 upload-dir/
 .classpath
 **/.DS_Store
+
+**/.DS_Store
+**/node_modules/
+**/dist/
+**/npm-debug.log*
+**/yarn-debug.log*
+**/yarn-error.log*
+**/test/unit/coverage/
+**/test/e2e/reports/
+**/selenium-debug.log
+
+# Editor directories and files
+**/.idea
+**/.vscode
+**/*.suo
+**/*.ntvs*
+**/*.njsproj
+**/*.sln
