--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,12 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
     testCompile("org.springframework.boot:spring-boot-starter-test")
+    
     compile group: 'org.neo4j.driver', name: 'neo4j-java-driver', version: '1.6.1'
+    compile 'org.neo4j:neo4j-ogm-core:3.0.0'
+    compile group: 'org.neo4j', name: 'neo4j', version: '3.4.0'
+
+
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     compile group: 'org.json', name: 'json', version: '20180130'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web',     version: '2.0.2.RELEASE'
