--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.servlet.multipart.max-file-size=128MB
 spring.servlet.multipart.max-request-size=128MB
 spring.http.multipart.enabled=false
+spring.mvc.view.prefix=/
+spring.mvc.view.suffix=.html
+spring.freemarker.check-template-location=false
